--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -53,6 +53,7 @@
   "INTERNET_ERROR": "Check your internet connection.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "Lyrics",
   "LYRICS_NOT_FOUND": "Lyrics not found.",
   "LYRICS_RETRIEVING": "Retrieving lyrics...",
@@ -69,7 +70,7 @@
   "NO_COLLECTION_TITLE": "Empty Collection",
   "NO_DOWNLOAD_UPDATE": "Your app is already updated",
   "NO_INTERNET_SUBTITLE": "Check your connection.",
-  "NO_INTERNET_TITLE": "No internet",
+  "NO_INTERNET_TITLE": "No Internet",
   "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
   "N_TRACKS": "N tracks",
   "OK": "OKAY",
@@ -90,6 +91,7 @@
   "REINDEX": "Reindex",
   "REMOVE": "REMOVE",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
+  "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
   "SAVE_TO_DOWNLOADS": "Save to downloads",
@@ -149,5 +151,7 @@
   "YOUTUBE": "YouTube",
   "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online.",
   "YOUTUBE_NO_RESULTS": "Nothing like that could be found",
-  "YOUTUBE_WELCOME": "Search for music or give a link"
+  "YOUTUBE_WELCOME": "Search for music or give a link",
+  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
+  "YOUTUBE_WELCOME_TITLE": "Let's Go"
 }
