--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -53,6 +53,7 @@
   "INTERNET_ERROR": "अपना इंटरनेट कनेक्शन चेक करें।",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "आपके कलेक्शन में कम से कम एक फ़ोल्डर रहने की आवश्यकता है।",
+  "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "गाने के बोल",
   "LYRICS_NOT_FOUND": "गाने के बोल नहीं मिले",
   "LYRICS_RETRIEVING": "गाने के बोल पुनः प्राप्त किये जा रहे है...",
@@ -90,6 +91,7 @@
   "REINDEX": "Reindex",
   "REMOVE": "हटाये",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
+  "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "जानकारी पुनः प्राप्त कि जा रही है",
   "RETRIEVING_LINK": "स्ट्रीम पुनः प्राप्त कि जा रही है",
   "SAVE_TO_DOWNLOADS": "डौन्लोडस में सेव करें",
@@ -149,5 +151,7 @@
   "YOUTUBE": "YouTube",
   "YOUTUBE_INTERNET_ERROR": "जब तक आप वापस ऑनलाइन हो जाते हैं, तब तक हम आपका स्थानीय संगीत बजाते हैं।",
   "YOUTUBE_NO_RESULTS": "ऐसा कुछ नहीं मिला।",
-  "YOUTUBE_WELCOME": "संगीत खोजें या लिंक दें"
+  "YOUTUBE_WELCOME": "संगीत खोजें या लिंक दें",
+  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
+  "YOUTUBE_WELCOME_TITLE": "Let's Go"
 }
