🌐 Update translations to include ITaskbarList3 thumb bar labels

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -59,6 +59,7 @@
   "LYRICS_RETRIEVING": "Retrieving lyrics...",
   "MENU": "Menu",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
+  "NEXT": "Next",
   "NO": "NEIN",
   "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
   "NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
@@ -86,6 +87,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Add to playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Here are the tracks in this playlist",
   "PLAY_NOW": "Play now",
+  "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Recommendations",
   "REFRESH": "REFRESH",
   "REINDEX": "Reindex",
