--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -59,6 +59,7 @@
   "LYRICS_RETRIEVING": "Récupération des paroles ...",
   "MENU": "Menu",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
+  "NEXT": "Next",
   "NO": "NON",
   "NOTIFICATION_LYRICS_SUBTITLE": "Afficher les paroles dans une notification.",
   "NOTIFICATION_LYRICS_TITLE": "Notification de Paroles",
@@ -76,7 +77,7 @@
   "OK": "OK",
   "OPTIONS": "Options",
   "PAUSE": "Pause",
-  "PLAY": "Lire",
+  "PLAY": "Play",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Créer un nouveau playlist",
   "PLAYLISTS_SUBHEADER": "Playlists available on your device",
@@ -86,6 +87,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Ajouter au playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Voici les morceaux de cette playlist",
   "PLAY_NOW": "Lire maintenant",
+  "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Recommendations",
   "REFRESH": "ACTUALISER",
   "REINDEX": "Reindex",
