--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -59,6 +59,7 @@
   "LYRICS_RETRIEVING": "Songteksten ophalen...",
   "MENU": "Menu",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
+  "NEXT": "Next",
   "NO": "NEE",
   "NOTIFICATION_LYRICS_SUBTITLE": "Songteksten weergeven in notficaties",
   "NOTIFICATION_LYRICS_TITLE": "Notificatie songteksten",
@@ -75,8 +76,8 @@
   "N_TRACKS": "N tracks",
   "OK": "OKÉ",
   "OPTIONS": "Opties",
-  "PAUSE": "Pauze",
-  "PLAY": "Afspelen",
+  "PAUSE": "Pause",
+  "PLAY": "Play",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Maak een nieuwe afspeellijst",
   "PLAYLISTS_SUBHEADER": "Playlists available on your device",
@@ -86,6 +87,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Toevoegen aan afspeellijst",
   "PLAYLIST_TRACKS_SUBHEADER": "Hier zijn de nummers in deze afspeellijst",
   "PLAY_NOW": "Nu afspelen",
+  "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Aanbevelingen",
   "REFRESH": "HERLADEN",
   "REINDEX": "Reindex",
