--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -59,6 +59,7 @@
   "LYRICS_RETRIEVING": "Retrieving lyrics...",
   "MENU": "Меню",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
+  "NEXT": "Next",
   "NO": "НЕТ",
   "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
   "NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
@@ -75,8 +76,8 @@
   "N_TRACKS": "N tracks",
   "OK": "ОК",
   "OPTIONS": "Параметры",
-  "PAUSE": "Пауза",
-  "PLAY": "Плей",
+  "PAUSE": "Pause",
+  "PLAY": "Play",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Создать плейлист",
   "PLAYLISTS_SUBHEADER": "Playlists available on your device",
@@ -86,6 +87,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Добавить в плейлист",
   "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
   "PLAY_NOW": "Play now",
+  "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Recommendations",
   "REFRESH": "ОБНОВИТЬ",
   "REINDEX": "Reindex",
