--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -59,6 +59,7 @@
   "LYRICS_RETRIEVING": "Hämtar låttexter...",
   "MENU": "Meny",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
+  "NEXT": "Next",
   "NO": "NEJ",
   "NOTIFICATION_LYRICS_SUBTITLE": "Visa låttexter i en avisering.",
   "NOTIFICATION_LYRICS_TITLE": "Avisering låttexter",
@@ -75,8 +76,8 @@
   "N_TRACKS": "N tracks",
   "OK": "OKEJ",
   "OPTIONS": "Val",
-  "PAUSE": "Paus",
-  "PLAY": "Spela",
+  "PAUSE": "Pause",
+  "PLAY": "Play",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Skapa ny spellista",
   "PLAYLISTS_SUBHEADER": "Playlists available on your device",
@@ -86,6 +87,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "Lägg till spellista",
   "PLAYLIST_TRACKS_SUBHEADER": "Här är låtarna i denna spellista",
   "PLAY_NOW": "Spela nu",
+  "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "Rekommenderat",
   "REFRESH": "UPPDATERA",
   "REINDEX": "Reindex",
