--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -59,6 +59,7 @@
   "LYRICS_RETRIEVING": "गाने के बोल पुनः प्राप्त किये जा रहे है...",
   "MENU": "मेन्यू",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
+  "NEXT": "Next",
   "NO": "नहीं",
   "NOTIFICATION_LYRICS_SUBTITLE": "अधिसूचना में गाने के बोल दिखाएं।",
   "NOTIFICATION_LYRICS_TITLE": "गाने के बोल की अधिसूचना",
@@ -75,8 +76,8 @@
   "N_TRACKS": "N tracks",
   "OK": "ठीक",
   "OPTIONS": "विकल्प",
-  "PAUSE": "रोकें",
-  "PLAY": "बजाएं",
+  "PAUSE": "Pause",
+  "PLAY": "Play",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "नयी प्लेलिस्ट बनायें",
   "PLAYLISTS_SUBHEADER": "Playlists available on your device",
@@ -86,6 +87,7 @@
   "PLAYLIST_ADD_DIALOG_TITLE": "प्लेलिस्ट में जोड़े",
   "PLAYLIST_TRACKS_SUBHEADER": "इस प्लेलिस्ट के गाने",
   "PLAY_NOW": "अभी गाना बजाएं",
+  "PREVIOUS": "Previous",
   "RECOMMENDATIONS": "अनुशंसित",
   "REFRESH": "रिफ्रेश",
   "REINDEX": "Reindex",
