--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -9,56 +9,56 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Skladatelji",
   "ARTIST_SINGLE": "Ustvarjalec",
-  "ASCENDING": "Ascending",
+  "ASCENDING": "Po abecedi naprej",
   "A_TO_Z": "Od A do Z",
   "BUFFERING": "Bufferanje...",
   "CANCEL": "PREKLIČI",
   "COLLECTION": "Zbirka",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Ali si res prepričan...",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Izbriši ta album?",
-  "COLLECTION_INDEXING_HINT": "Adding your music ...",
+  "COLLECTION_INDEXING_HINT": "Dodajam tvojo glasbo ...",
   "COLLECTION_INDEXING_LABEL": "Tvoja kolekcija se sinhronizira z aplikacijo.\nNi dobra ideja, da zapreš aplikacijo.",
   "COLLECTION_INFO_SUBHEADER": "Nekaj stvari o albumu",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Tukaj so shranjeni albumi",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Tukaj so ustvarjalci, shranjeni v tvoji napravi.",
-  "COLLECTION_OTHER_SUBHEADER_TRACK": "Here are your other tracks",
+  "COLLECTION_OTHER_SUBHEADER_TRACK": "Tukaj so ostale pesmi",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Ali hočeš odstraniti seznam predvajanja?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Ali si prepričan?",
   "COLLECTION_SEARCH_LABEL": "Pogled v tvojo zbirko",
   "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Nič nisem našel v tvoji kolekciji",
-  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "Ni zadetkov",
   "COLLECTION_SEARCH_WELCOME": "Vpiši nekaj za iskanje v tvoji kolekciji",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Poišči in shrani nekaj glasbe.\nZavrti osveži gumb, da se pokažejo nove pesmi.",
-  "COLLECTION_TOP_SUBHEADER_ALBUM": "Tukaj je zadnji shranjeni avtor",
-  "COLLECTION_TOP_SUBHEADER_ARTIST": "Here is the latest artist saved by you",
-  "COLLECTION_TOP_SUBHEADER_TRACK": "Here is the latest track saved by you",
+  "COLLECTION_TOP_SUBHEADER_ALBUM": "Tukaj je zadnji shranjeni album",
+  "COLLECTION_TOP_SUBHEADER_ARTIST": "Tukaj je zadnji ustvarjalec, katerega si shranil",
+  "COLLECTION_TOP_SUBHEADER_TRACK": "Tukaj je zadnja pesem, katero si shranil",
   "COLLECTION_TRACKS_SUBHEADER": "Tukaj so shranjene pesmi",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Ali res hočeš izbrisati to pesem?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Ali hočeš izbrisati to?",
   "COMING_UP": "Naslednje",
-  "CREATE": "Create",
-  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
-  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
+  "CREATE": "Ustvari",
+  "CREATE_NEW_PLAYLIST": "USTVARI NOV SEZNAM PREDVAJANJA",
+  "CREATE_PLAYLIST_SUBHEADER": "Ustvari nov seznam predvajanja, da lahko dodaš svojo glasbo",
   "DATE_ADDED": "Po datumu prenosa",
   "DELETE": "Izbriši",
   "DELETE_TRACK": "Izbriši pesem",
-  "DESCENDING": "Descending",
+  "DESCENDING": "Po abecedi nazaj",
   "DISCORD": "DISCORD STREŽNIK",
   "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
   "EXIT_SUBTITLE": "Ali res hočeš zapreti aplikacijo?",
   "EXIT_TITLE": "Izhod",
-  "GO_TO_SETTINGS": "GO TO SETTINGS",
+  "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
   "INTERNET_ERROR": "Prosimo, preverite vašo internetno povezavo",
-  "KNOW_MORE": "KNOW MORE",
+  "KNOW_MORE": "POGLEJ VEČ",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Vsaj en direktorij mora ostati v tvoji zbirki.",
-  "LISTENING_TO_MUSIC": "Listening to music 💜",
+  "LISTENING_TO_MUSIC": "Posluša glasbo 💜",
   "LYRICS": "Besedilo pesmi",
   "LYRICS_NOT_FOUND": "Besedilo pesmi ni bilo najdeno.",
   "LYRICS_RETRIEVING": "Pridobivanje besedila pesmi...",
   "MENU": "Meni",
-  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
+  "M_TRACKS_AND_N_ALBUMS": "M pesmi & N albumov",
   "NEXT": "Next",
   "NO": "NE",
   "NOTIFICATION_LYRICS_SUBTITLE": "Pokaži besedilo pesmi v obvestilih.",
@@ -72,28 +72,28 @@
   "NO_DOWNLOAD_UPDATE": "Aplikacija je že posodobljena.",
   "NO_INTERNET_SUBTITLE": "Preveri internetno povezavo",
   "NO_INTERNET_TITLE": "Ni interneta",
-  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
-  "N_TRACKS": "N tracks",
+  "NO_PLAYLISTS_FOUND": "Nismo našli seznamov predvajanja.\nUstvari jih, če jih hočeš videti.",
+  "N_TRACKS": "N pesmi",
   "OK": "OK",
   "OPTIONS": "Opcije",
   "PAUSE": "Pause",
   "PLAY": "Play",
   "PLAYLIST": "Playlists",
   "PLAYLISTS_CREATE": "Ustvari seznam predvajanja",
-  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
+  "PLAYLISTS_SUBHEADER": "Seznami predvajanja na voljo v tvoji napravi",
   "PLAYLISTS_TEXT_FIELD_HINT": "Ime za tvoj seznam predvajanja",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Ime Seznama predvajanja",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Ime seznama predvajanja",
   "PLAYLIST_ADD_DIALOG_BODY": "Izberi pesem za seznam predvajanja",
   "PLAYLIST_ADD_DIALOG_TITLE": "Dodaj na seznam predvajanja",
   "PLAYLIST_TRACKS_SUBHEADER": "Tukaj so pesmi iz seznama predvajanja",
   "PLAY_NOW": "Predvajaj zdaj",
-  "PREVIOUS": "Previous",
+  "PREVIOUS": "Prejšnja",
   "RECOMMENDATIONS": "Priporočeno",
   "REFRESH": "OSVEŽI",
-  "REINDEX": "Reindex",
+  "REINDEX": "Reindeksiraj",
   "REMOVE": "ODSTRANI",
-  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
-  "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
+  "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
+  "RESULTS_FOR_QUERY": "Zadetki za \"QUERY\"",
   "RETRIEVING_INFO": "Pridobivanje informacij o pesmi",
   "RETRIEVING_LINK": "Pridobivanje toka pesmi",
   "SAVE_TO_DOWNLOADS": "Shrani med prenose",
@@ -102,8 +102,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Tvoja nedavna iskanja",
   "SEARCH_NO_RECENT_SEARCHES": "Tvoji nedavni prenosi so tukaj",
   "SEARCH_RESULT_LOADER_LABEL": "Pridobivanje tvoje glasbe...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
-  "SEE_ALL": "See All",
+  "SEARCH_WELCOME": "Išči Harmonoid...",
+  "SEE_ALL": "Poglej vse",
   "SELECTED_DIRECTORIES": "Izbrani direktoriji:",
   "SELECTED_DIRECTORY": "Izbran direktorij:",
   "SETTING": "Nastavitve",
@@ -136,25 +136,25 @@
   "SETTING_THEME_SUBTITLE": "Menjaj med temnim in svetlim načinom",
   "SETTING_THEME_TITLE": "Način",
   "SHARE": "Deli",
-  "SHOW_ALBUM": "Show album",
-  "SORT_BY": "Sort By",
+  "SHOW_ALBUM": "Pokaži album",
+  "SORT_BY": "Filter",
   "STARTING_PLAYBACK": "Začenjam predvajanje",
   "SWITCH_THEME": "Zamenjaj temo",
   "THEME_MODE_DARK": "Temni",
   "THEME_MODE_LIGHT": "Svetli",
-  "THEME_MODE_SYSTEM": "System",
+  "THEME_MODE_SYSTEM": "Sistemska nastavitev",
   "TRACK": "Pesmi",
   "TRACKS_FROM_ARTIST": "Pesmi od tega ustvarjalca.",
   "TRACK_SINGLE": "Pesem",
   "TRANSFERS": "Prenosi",
   "WARNING": "Opozorilo",
-  "YEAR": "Year",
+  "YEAR": "Leto",
   "YES": "JA",
   "YOUTUBE": "YouTube",
   "YOUTUBE_INTERNET_ERROR": "Predvajajmo lokalno glasbo, medtem ko ni internetne povezave.",
   "YOUTUBE_NO_RESULTS": "Iskali smo širno, a tega nismo mogli najti.",
   "YOUTUBE_WELCOME": "Išči za glasbo ali pa vpiši povezavo",
-  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
-  "YOUTUBE_WELCOME_TITLE": "Let's Go"
+  "YOUTUBE_WELCOME_SUBTITLE": "Priporočila se bodo pojavljala tukaj, glede na to, kaj boste iskali.",
+  "YOUTUBE_WELCOME_TITLE": "Pa pojdimo"
 }
 
