🌐 Update Swedish translation (thanks to Max Haureus)

--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -9,91 +9,70 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Artister",
   "ARTIST_SINGLE": "Artist",
-  "ASCENDING": "Ascending",
+  "ASCENDING": "Stigande",
   "A_TO_Z": "A till Ö",
   "BUFFERING": "Buffrar...",
   "CANCEL": "AVBRYT",
   "COLLECTION": "Samling",
-  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Vill du avlägsna detta album sparat på din enhet?",
-  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Är du säker?",
-  "COLLECTION_INDEXING_HINT": "Adding your music ...",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Radera albumet \"NAME\"?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Radera",
+  "COLLECTION_INDEXING_HINT": "Lägger till din musik ...",
   "COLLECTION_INDEXING_LABEL": "Din lokala musik synkas.\nInte en god ide' att stänga applikationen.",
   "COLLECTION_INFO_SUBHEADER": "Lite information om albumet",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Fler album",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Fler artister",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Fler låtar",
-  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Vill du radera denna spellista?",
-  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Är du säker?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Radera spellistan \"NAME\"?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Radera",
   "COLLECTION_SEARCH_LABEL": "Leta i din samling",
   "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "Inget sådant fanns i din samling",
-  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
-  "COLLECTION_SEARCH_WELCOME": "Skriv något för att söka i din samling",
-  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Sök & spara musik för att se här.\nSnurra på uppdatera för att se nya saker.",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "Inga resultat",
+  "COLLECTION_SEARCH_WELCOME": "Sök album, låtar eller artister...",
+  "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Sök & spara musik för att se här.\nSnurra på uppdatera för att se nya objekt.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Senaste album",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Senaste artist",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Senaste låt",
-  "COLLECTION_TRACKS_SUBHEADER": "Låtar från albumet",
-  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Vill du avlägsna denna låt sparad på din enhet?",
-  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Är du säker?",
-  "COMING_UP": "Coming Up",
-  "CREATE": "Create",
-  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
-  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
+  "COLLECTION_TRACKS_SUBHEADER": "Låtar",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Radera låten \"NAME\"?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Radera",
+  "COMING_UP": "Kommer Härnäst",
+  "CREATE": "Skapa",
+  "CREATE_NEW_PLAYLIST": "SKAPA NY SPELLISTA",
+  "CREATE_PLAYLIST_SUBHEADER": "Skapa ny spellista för att lägga till din musik",
   "DATE_ADDED": "Datum tillagd",
   "DELETE": "Radera",
   "DELETE_TRACK": "Radera låt",
-  "DESCENDING": "Descending",
+  "DESCENDING": "Sjunkande",
   "DISCORD": "DISCORD SERVER",
   "DOWNLOAD_UPDATE": "LADDA NER UPPDATERING",
-  "ENABLE_125_SCALING": "Enable 125% scaling.",
+  "ENABLE_125_SCALING": "Aktivera 125% uppskalning.",
   "ENABLE_ACRYLIC_BLUR": "Aktivera Windows akryl suddighet.",
   "EXIT_SUBTITLE": "Vill du avsluta Harmonoid?",
   "EXIT_TITLE": "Avsluta",
-  "GO_TO_SETTINGS": "GO TO SETTINGS",
+  "GO_TO_SETTINGS": "GÅ TILL INSTÄLLNINGAR",
   "INTERNET_ERROR": "Granska din internetanslutning.",
-  "KNOW_MORE": "KNOW MORE",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "LISTENING_TO_MUSIC": "Listening to music 💜",
+  "KNOW_MORE": "VET MER",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Minst en mapp bör finnas i din samling.",
+  "LISTENING_TO_MUSIC": "Lyssnar på musik 💜",
   "LYRICS": "Låttexter",
   "LYRICS_NOT_FOUND": "Låttexter inte funna.",
   "LYRICS_RETRIEVING": "Hämtar låttexter...",
   "MENU": "Meny",
-  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
-  "NEXT": "Next",
+  "M_TRACKS_AND_N_ALBUMS": "M låtar & N album",
+  "NEXT": "Nästa",
   "NO": "NEJ",
   "NOTIFICATION_LYRICS_SUBTITLE": "Visa låttexter i en avisering.",
   "NOTIFICATION_LYRICS_TITLE": "Avisering låttexter",
-  "NOW_PLAYING": "Spelas Nu",
-  "NOW_PLAYING_NEXT_TRACK": "NÄSTA",
-  "NOW_PLAYING_NOT_PLAYING_TITLE": "Inget spelas upp",
-  "NOW_PLAYING_PREVIOUS_TRACK": "FÖREGÅENDE",
-  "NO_COLLECTION_SUBTITLE": "Ingen musik hittades.\nÄndra sökväg till musik i inställningarna.",
-  "NO_COLLECTION_TITLE": "Tom samling",
-  "NO_DOWNLOAD_UPDATE": "Din applikation är redan uppdaterad",
-  "NO_INTERNET_SUBTITLE": "Granska din anslutning.",
-  "NO_INTERNET_TITLE": "Inget internet",
-  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
-  "N_TRACKS": "N tracks",
-  "OK": "OKEJ",
-  "OPTIONS": "Val",
-  "PAUSE": "Pause",
-  "PLAY": "Play",
-  "PLAYLIST": "Playlists",
-  "PLAYLISTS_CREATE": "Skapa ny spellista",
-  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Namn för din nya spellista",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Spellistans namn",
-  "PLAYLIST_ADD_DIALOG_BODY": "Välj en spellista för att lägga till denna låt",
   "PLAYLIST_ADD_DIALOG_TITLE": "Lägg till spellista",
   "PLAYLIST_TRACKS_SUBHEADER": "Här är låtarna i denna spellista",
   "PLAY_NOW": "Spela nu",
-  "PREVIOUS": "Previous",
+  "PREVIOUS": "Föregående",
   "RECOMMENDATIONS": "Rekommenderat",
   "REFRESH": "UPPDATERA",
-  "REINDEX": "Reindex",
+  "REINDEX": "Omindexera",
   "REMOVE": "TA BORT",
-  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
-  "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
+  "REMOVE_FROM_PLAYLIST": "Ta bort från spellista",
+  "RESULTS_FOR_QUERY": "Resultat för \"QUERY\"",
   "RETRIEVING_INFO": "Hämtar info",
   "RETRIEVING_LINK": "Hämtar stream",
   "SAVE_TO_DOWNLOADS": "Spara i nerladdningar",
@@ -102,9 +81,9 @@
   "SEARCH_HISTORY_SUBHEADER": "Dina senaste sökningar",
   "SEARCH_NO_RECENT_SEARCHES": "Dina senaste sökningar visas här",
   "SEARCH_RESULT_LOADER_LABEL": "Hämtar din musik...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
-  "SEE_ALL": "See All",
-  "SELECTED_DIRECTORIES": "Valda kataloger:",
+  "SEARCH_WELCOME": "Sök Harmonoid...",
+  "SEE_ALL": "Se Allt",
+  "SELECTED_DIRECTORIES": "Här är en lista över vad vi funnit hittills",
   "SELECTED_DIRECTORY": "Vald katalog:",
   "SETTING": "Inställningar",
   "SETTING_ACCENT_COLOR_AUTOMATIC": "Automatisk accentfärg",
@@ -117,8 +96,8 @@
   "SETTING_GITHUB": "GITHUB",
   "SETTING_INDEXING_DONE": "Indexerad",
   "SETTING_INDEXING_LINEAR_PROGRESS_INDICATOR": "Indexerat NUMBER_STRING av TOTAL_STRING låtar...",
-  "SETTING_INDEXING_SUBTITLE": "Omindexera din musiksamling",
-  "SETTING_INDEXING_TITLE": "Indexering",
+  "SETTING_INDEXING_SUBTITLE": "Inkludera fler mappar i din samling",
+  "SETTING_INDEXING_TITLE": "Samling",
   "SETTING_INDEXING_WARNING": "Avbryt inte processen.",
   "SETTING_LANGUAGE_PROVIDERS_SUBTITLE": "Tack så mycket för ditt stöd för applikationen.",
   "SETTING_LANGUAGE_PROVIDERS_TITLE": "Översättare",
@@ -136,24 +115,24 @@
   "SETTING_THEME_SUBTITLE": "Ändra applikationen till ljust eller mörkt läge",
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Dela",
-  "SHOW_ALBUM": "Show album",
-  "SORT_BY": "Sort By",
+  "SHOW_ALBUM": "Visa album",
+  "SORT_BY": "Sortera Enligt",
   "STARTING_PLAYBACK": "Startar uppspelning",
   "SWITCH_THEME": "Byt tema",
   "THEME_MODE_DARK": "Mörk",
   "THEME_MODE_LIGHT": "Ljus",
   "THEME_MODE_SYSTEM": "System",
   "TRACK": "Låtar",
-  "TRACKS_FROM_ARTIST": "Låtar av denna artist.",
+  "TRACKS_FROM_ARTIST": "Låtar",
   "TRACK_SINGLE": "Låt",
   "TRANSFERS": "Överföringar",
-  "WARNING": "Warning",
-  "YEAR": "Year",
+  "WARNING": "Varning",
+  "YEAR": "År",
   "YES": "JA",
   "YOUTUBE": "YouTube",
   "YOUTUBE_INTERNET_ERROR": "Låt oss spela din lokala musik, medan du återgår online.",
   "YOUTUBE_NO_RESULTS": "Inget sådant hittades.",
   "YOUTUBE_WELCOME": "Sök musik eller ange länk",
-  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
-  "YOUTUBE_WELCOME_TITLE": "Let's Go"
+  "YOUTUBE_WELCOME_SUBTITLE": "Rekommendationer kommer syns här baserat på vad du lyssnar på.",
+  "YOUTUBE_WELCOME_TITLE": "Då kör vi"
 }
