--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -1,33 +1,33 @@
 {
   "ABOUT_SUBTITLE": "Информация о проекте и его разработчиках.",
   "ABOUT_TITLE": "О приложении",
-  "ADD_NEW_FOLDER": "ADD NEW FOLDER",
-  "ADD_TO_NOW_PLAYING": "Add to now playing",
+  "ADD_NEW_FOLDER": "ДОБАВИТЬ ПАПКУ",
+  "ADD_TO_NOW_PLAYING": "Добавить в очередь",
   "ADD_TO_PLAYLIST": "Добавить в плейлист",
   "ALBUM": "Альбомы",
-  "ALBUMS_FROM_ARTIST": "Albums from this artist.",
-  "ALBUM_SINGLE": "Album",
+  "ALBUMS_FROM_ARTIST": "Альбомы этого исполнителя.",
+  "ALBUM_SINGLE": "Альбом",
   "ARTIST": "Исполнители",
-  "ARTIST_SINGLE": "Artist",
-  "ASCENDING": "Ascending",
+  "ARTIST_SINGLE": "Исполнитель",
+  "ASCENDING": "По возрастанию",
   "A_TO_Z": "По алфавиту",
-  "BUFFERING": "Buffering...",
+  "BUFFERING": "Буферизация...",
   "CANCEL": "ОТМЕНА",
   "COLLECTION": "Коллекция",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Вы действительно хотите удалить альбом?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Удалить альбом",
-  "COLLECTION_INDEXING_HINT": "Adding your music ...",
-  "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
+  "COLLECTION_INDEXING_HINT": "Добавляем вашу музыку...",
+  "COLLECTION_INDEXING_LABEL": "Ваша музыка синхронизируется.\nНе закрывайте приложение.",
   "COLLECTION_INFO_SUBHEADER": "Немного об альбоме",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Другие альбомы",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Другие исполнители",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Другие треки",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Хотите удалить плейлист?",
   "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Вы уверены?",
-  "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
+  "COLLECTION_SEARCH_LABEL": "Поиск по Вашей коллекции",
   "COLLECTION_SEARCH_NO_RESULTS_SUBTITLE": "В коллекции ничего не найдено",
-  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "No Results",
-  "COLLECTION_SEARCH_WELCOME": "Поиск среди загруженных треков",
+  "COLLECTION_SEARCH_NO_RESULTS_TITLE": "Нет результатов",
+  "COLLECTION_SEARCH_WELCOME": "Поиск треков",
   "COLLECTION_TOP_BODY_ALBUM_EMPTY": "Ищите и сохраняйте музыку, чтобы увидеть её здесь.",
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Последний сохранённый альбом",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Последний сохранённый исполнитель",
@@ -35,34 +35,34 @@
   "COLLECTION_TRACKS_SUBHEADER": "Сохранённые треки",
   "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Вы действительно хотите удалить сохранённый трек?",
   "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
-  "COMING_UP": "Coming Up",
-  "CREATE": "Create",
-  "CREATE_NEW_PLAYLIST": "CREATE NEW PLAYLIST",
-  "CREATE_PLAYLIST_SUBHEADER": "Create a new playlist to add your music",
+  "COMING_UP": "В очереди",
+  "CREATE": "Создать",
+  "CREATE_NEW_PLAYLIST": "СОЗДАТЬ НОВЫЙ ПЛЕЙЛИСТ",
+  "CREATE_PLAYLIST_SUBHEADER": "Создайте новый плейлист, чтобы сортировать музыку",
   "DATE_ADDED": "По дате добавления",
   "DELETE": "Удалить",
   "DELETE_TRACK": "Удалить трек",
-  "DESCENDING": "Descending",
+  "DESCENDING": "По убыванию",
   "DISCORD": "DISCORD",
   "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
-  "ENABLE_125_SCALING": "Enable 125% scaling.",
-  "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "ENABLE_125_SCALING": "Включить масштаб 125%.",
+  "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
   "EXIT_SUBTITLE": "Хотите выйти?",
   "EXIT_TITLE": "Выход",
-  "GO_TO_SETTINGS": "GO TO SETTINGS",
+  "GO_TO_SETTINGS": "В НАСТРОЙКИ",
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
-  "KNOW_MORE": "KNOW MORE",
-  "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
-  "LISTENING_TO_MUSIC": "Listening to music 💜",
-  "LYRICS": "Lyrics",
-  "LYRICS_NOT_FOUND": "Lyrics not found.",
-  "LYRICS_RETRIEVING": "Retrieving lyrics...",
+  "KNOW_MORE": "УЗНАТЬ БОЛЬШЕ",
+  "LAST_COLLECTION_DIRECTORY_REMOVED": "Оставьте хотя бы одну папку.",
+  "LISTENING_TO_MUSIC": "Слушает музыку 💜",
+  "LYRICS": "Текст",
+  "LYRICS_NOT_FOUND": "Текст не найден.",
+  "LYRICS_RETRIEVING": "Получение...",
   "MENU": "Меню",
-  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
-  "NEXT": "Next",
+  "M_TRACKS_AND_N_ALBUMS": "M треков & N альбомов",
+  "NEXT": "ДАЛЬШЕ",
   "NO": "НЕТ",
-  "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
-  "NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
+  "NOTIFICATION_LYRICS_SUBTITLE": "Показывать тексты песен в уведомлении.",
+  "NOTIFICATION_LYRICS_TITLE": "Тексты в уведомлении",
   "NOW_PLAYING": "Плеер",
   "NOW_PLAYING_NEXT_TRACK": "ВПЕРЁД",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Ничего не играет.",
@@ -72,40 +72,40 @@
   "NO_DOWNLOAD_UPDATE": "Установлена последняя версия",
   "NO_INTERNET_SUBTITLE": "Проверьте подключение.",
   "NO_INTERNET_TITLE": "Нет доступа в Интернет",
-  "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
-  "N_TRACKS": "N tracks",
+  "NO_PLAYLISTS_FOUND": "Плейлисты не найдены.\nСоздайте плейлист, чтобы увидеть его здесь.",
+  "N_TRACKS": "N треков",
   "OK": "ОК",
   "OPTIONS": "Параметры",
-  "PAUSE": "Pause",
-  "PLAY": "Play",
-  "PLAYLIST": "Playlists",
+  "PAUSE": "Пауза",
+  "PLAY": "Плей",
+  "PLAYLIST": "Плейлисты",
   "PLAYLISTS_CREATE": "Создать плейлист",
-  "PLAYLISTS_SUBHEADER": "Playlists available on your device",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Назовите плейлист",
+  "PLAYLISTS_SUBHEADER": "Плейлисты на Вашем устройстве",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Название",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Название",
   "PLAYLIST_ADD_DIALOG_BODY": "Выберите плейлист",
   "PLAYLIST_ADD_DIALOG_TITLE": "Добавить в плейлист",
   "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
-  "PLAY_NOW": "Play now",
-  "PREVIOUS": "Previous",
-  "RECOMMENDATIONS": "Recommendations",
+  "PLAY_NOW": "Проиграть",
+  "PREVIOUS": "Предыдущие",
+  "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "ОБНОВИТЬ",
   "REINDEX": "Reindex",
   "REMOVE": "REMOVE",
-  "REMOVE_FROM_PLAYLIST": "Remove from playlist",
-  "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
-  "RETRIEVING_INFO": "Retrieving info",
-  "RETRIEVING_LINK": "Retrieving stream",
+  "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
+  "RESULTS_FOR_QUERY": "Результаты по запросу \"QUERY\"",
+  "RETRIEVING_INFO": "Получение информации",
+  "RETRIEVING_LINK": "Получение ссылки",
   "SAVE_TO_DOWNLOADS": "Сохранить в \"Downloads\"",
-  "SEARCH": "Search",
+  "SEARCH": "Поиск",
   "SEARCH_COLLECTION": "Поиск по коллекции",
   "SEARCH_HISTORY_SUBHEADER": "Недавние запросы",
   "SEARCH_NO_RECENT_SEARCHES": "Здесь появится история поиска",
   "SEARCH_RESULT_LOADER_LABEL": "Получаем музыку...",
-  "SEARCH_WELCOME": "Search Harmonoid...",
-  "SEE_ALL": "See All",
-  "SELECTED_DIRECTORIES": "Selected directories:",
-  "SELECTED_DIRECTORY": "Selected directory:",
+  "SEARCH_WELCOME": "Ищите по Harmonoid...",
+  "SEE_ALL": "Смотреть ещё",
+  "SELECTED_DIRECTORIES": "Выбранные папки:",
+  "SELECTED_DIRECTORY": "Выбранная папка:",
   "SETTING": "Настройки",
   "SETTING_ACCENT_COLOR_AUTOMATIC": "Автоматически",
   "SETTING_ACCENT_COLOR_SUBTITLE": "Изменить дополнительный цвет приложения",
@@ -136,24 +136,24 @@
   "SETTING_THEME_SUBTITLE": "Сменить тему приложения",
   "SETTING_THEME_TITLE": "Тема",
   "SHARE": "Поделиться",
-  "SHOW_ALBUM": "Show album",
-  "SORT_BY": "Sort By",
-  "STARTING_PLAYBACK": "Starting playback",
+  "SHOW_ALBUM": "Показать альбом",
+  "SORT_BY": "Сортировать",
+  "STARTING_PLAYBACK": "Воспроизведение",
   "SWITCH_THEME": "Сменить тему",
   "THEME_MODE_DARK": "Тёмная",
   "THEME_MODE_LIGHT": "Светлая",
-  "THEME_MODE_SYSTEM": "System",
+  "THEME_MODE_SYSTEM": "Как в системе",
   "TRACK": "Треки",
-  "TRACKS_FROM_ARTIST": "Tracks from this artist.",
-  "TRACK_SINGLE": "Track",
-  "TRANSFERS": "Transfers",
-  "WARNING": "Warning",
-  "YEAR": "Year",
+  "TRACKS_FROM_ARTIST": "Треки этого исполнителя.",
+  "TRACK_SINGLE": "Трек",
+  "TRANSFERS": "ПЕРЕДАЧИ",
+  "WARNING": "Предупреждение",
+  "YEAR": "Год",
   "YES": "ДА",
   "YOUTUBE": "YouTube",
-  "YOUTUBE_INTERNET_ERROR": "Let's play your local music, while you get back online..",
-  "YOUTUBE_NO_RESULTS": "Nothing like that could be found.",
-  "YOUTUBE_WELCOME": "Search for music or give a link",
-  "YOUTUBE_WELCOME_SUBTITLE": "Recommendations will appear here based on what you listen.",
-  "YOUTUBE_WELCOME_TITLE": "Let's Go"
+  "YOUTUBE_INTERNET_ERROR": "Пока можете послушать локальную музыку...",
+  "YOUTUBE_NO_RESULTS": "Ничего подобного найдено не было.",
+  "YOUTUBE_WELCOME": "Ищите музыку или вставьте ссылку",
+  "YOUTUBE_WELCOME_SUBTITLE": "Здесь будут появляться рекомендации.",
+  "YOUTUBE_WELCOME_TITLE": "Поехали!"
 }
